Single source 2.9-v2.13 Install Rancher page

--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2026-02-18
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher 
 :product-path: installation-and-upgrade/other-installation-methods/http-proxy/install-rancher
@@ -65,15 +65,23 @@ kubectl rollout status deployment -n cert-manager cert-manager
 kubectl rollout status deployment -n cert-manager cert-manager-webhook
 ----
 
-== Install Rancher Prime
+== Install {rancher-product-name}
 
 Next you can install Rancher Prime itself. First, add the Helm repository:
 
+ifeval::["{build-type}" == "product"]
 ----
 helm repo add rancher-prime <helm-chart-repo-url>
 ----
 
 include::shared:ROOT:partial$en/helm-chart-repo-url.adoc[]
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+----
+helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
+----
+endif::[]
 
 Create a namespace:
 
@@ -83,6 +91,9 @@ kubectl create namespace cattle-system
 
 And install Rancher with Helm. Rancher also needs a proxy configuration so that it can communicate with external application catalogs or retrieve Kubernetes version update metadata:
 
+ifeval::["{build-type}" == "product"]
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+
 ----
 helm upgrade --install rancher rancher-prime/rancher \
    --namespace cattle-system \
@@ -90,6 +101,17 @@ helm upgrade --install rancher rancher-prime/rancher \
    --set proxy=http://${proxy_host} \
    --set noProxy=127.0.0.0/8\\,10.0.0.0/8\\,cattle-system.svc\\,172.16.0.0/12\\,192.168.0.0/16\\,.svc\\,.cluster.local
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+----
+helm upgrade --install rancher rancher-latest/rancher \
+   --namespace cattle-system \
+   --set hostname=rancher.example.com \
+   --set proxy=http://${proxy_host} \
+   --set noProxy=127.0.0.0/8\\,10.0.0.0/8\\,cattle-system.svc\\,172.16.0.0/12\\,192.168.0.0/16\\,.svc\\,.cluster.local
+----
+endif::[]
 
 After waiting for the deployment to finish:
 
