Single source v2.9-v2.13 Updating the SUSE Rancher Prime Certificate page

--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -1,6 +1,6 @@
 = Updating the {rancher-product-name} Certificate
 :page-languages: [en, zh]
-:revdate: 2025-03-12
+:revdate: 2026-02-18
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/resources/update-rancher-certificate 
 :product-path: installation-and-upgrade/resources/update-rancher-certificate
@@ -126,11 +126,22 @@ privateCA: true
 +
 [,bash]
 ----
-    helm upgrade rancher rancher-prime/rancher \
-     --namespace cattle-system \
-     -f values.yaml \
-     --version <DEPLOYED_RANCHER_VERSION>
+helm upgrade rancher rancher-prime/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+[,bash]
+----
+ helm upgrade rancher rancher-stable/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
+----
+endif::[]
 
 When the change is completed, navigate to `\https://<rancher_server_url>/v3/settings/cacerts` to verify that the value matches the CA certificate written in the `tls-ca` secret earlier. The CA `cacerts` value may not update until all Rancher pods start.
 
@@ -283,6 +294,9 @@ helm ls -n cattle-system
   ... If using Let's Encrypt update the value to: `letsEncrypt`
 . Update the Helm values for the Rancher chart using the `values.yaml` file, and the current chart version to prevent an upgrade:
 +
+ifeval::["{build-type}" == "product"]
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,bash]
 ----
 helm upgrade rancher rancher-prime/rancher \
@@ -290,6 +304,17 @@ helm upgrade rancher rancher-prime/rancher \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+[,bash]
+----
+helm upgrade rancher rancher-stable/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
+----
+endif::[]
 
 === 4. Reconfigure Rancher agents for the non-private/common certificate
 
