--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2025-08-05
+:revdate: 2026-02-18
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/resources/update-rancher-certificate 
 :product-path: installation-and-upgrade/resources/update-rancher-certificate
@@ -126,13 +126,27 @@ privateCA: true
 
 . Upgrade the Helm application instance using the `values.yaml` file and the current chart version. The version must match to prevent an upgrade of Rancher.
 +
+ifeval::["{build-type}" == "product"]
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,bash]
 ----
-    helm upgrade rancher rancher-prime/rancher \
-     --namespace cattle-system \
-     -f values.yaml \
-     --version <DEPLOYED_RANCHER_VERSION>
+helm upgrade rancher rancher-prime/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+[,bash]
+----
+ helm upgrade rancher rancher-stable/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
+----
+endif::[]
 
 When the change is completed, navigate to `\https://<rancher_server_url>/v3/settings/cacerts` to verify that the value matches the CA certificate written in the `tls-ca` secret earlier. The CA `cacerts` value may not update until all Rancher pods start.
 
@@ -285,6 +299,9 @@ helm ls -n cattle-system
   ... If using Let's Encrypt update the value to: `letsEncrypt`
 . Update the Helm values for the Rancher chart using the `values.yaml` file, and the current chart version to prevent an upgrade:
 +
+ifeval::["{build-type}" == "product"]
+include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
++
 [,bash]
 ----
 helm upgrade rancher rancher-prime/rancher \
@@ -292,6 +309,17 @@ helm upgrade rancher rancher-prime/rancher \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+[,bash]
+----
+helm upgrade rancher rancher-stable/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
+----
+endif::[]
 
 === 4. Reconfigure Rancher agents for the non-private/common certificate
 
