--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -2,7 +2,7 @@
 ifeval::["{build-type}" != "srfa"]
 :page-languages: [en, zh]
 endif::[]
-:revdate: 2026-01-26
+:revdate: 2026-02-18
 :page-revdate: {revdate}
 :community-path: getting-started/installation-and-upgrade/resources/update-rancher-certificate 
 :product-path: installation-and-upgrade/resources/update-rancher-certificate
@@ -123,18 +123,29 @@ privateCA: true
    As the certificate is signed by a private CA, it is important to ensure xref:installation-and-upgrade/references/helm-chart-options.adoc#_common_options[`privateCA: true`] is set in the `values.yaml` file.
 ====
 
-
 . Upgrade the Helm application instance using the `values.yaml` file and the current chart version. The version must match to prevent an upgrade of Rancher.
 +
+ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,bash]
 ----
-    helm upgrade rancher rancher-prime/rancher \
-     --namespace cattle-system \
-     -f values.yaml \
-     --version <DEPLOYED_RANCHER_VERSION>
+helm upgrade rancher rancher-prime/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+[,bash]
+----
+ helm upgrade rancher rancher-stable/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
+----
+endif::[]
 
 When the change is completed, navigate to `\https://<rancher_server_url>/v3/settings/cacerts` to verify that the value matches the CA certificate written in the `tls-ca` secret earlier. The CA `cacerts` value may not update until all Rancher pods start.
 
@@ -287,6 +298,7 @@ helm ls -n cattle-system
   ... If using Let's Encrypt update the value to: `letsEncrypt`
 . Update the Helm values for the Rancher chart using the `values.yaml` file, and the current chart version to prevent an upgrade:
 +
+ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
 [,bash]
@@ -296,6 +308,17 @@ helm upgrade rancher rancher-prime/rancher \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
 ----
+endif::[]
+
+ifeval::["{build-type}" == "community"]
+[,bash]
+----
+helm upgrade rancher rancher-stable/rancher \
+  --namespace cattle-system \
+  -f values.yaml \
+  --version <DEPLOYED_RANCHER_VERSION>
+----
+endif::[]
 
 === 4. Reconfigure Rancher agents for the non-private/common certificate
 
