Change top level pages to index.adoc

--- a/community-docs/v2.13/modules/nav.adoc
+++ b/community-docs/v2.13/modules/nav.adoc
@@ -1,22 +1,18 @@
-// What is Rancher? 
-// Check 
+.What is Rancher? 
 
 * xref:rancher-manager.adoc[Overview]
 
-// Getting Started
-// Check 
+.Getting Started 
 
 * xref:getting-started/overview.adoc[]
 
 // Rancher Deployment Quick Start Guides
-// Check 
 
-** xref:getting-started/quick-start-guides/quick-start-guides.adoc[]
+** xref:getting-started/quick-start-guides/index.adoc[]
 
 // Deploying Rancher Server
-// Check 
 
-*** xref:getting-started/quick-start-guides/deploy-rancher-manager/deploy-rancher-manager.adoc[]
+*** xref:getting-started/quick-start-guides/deploy-rancher-manager/index.adoc[]
 
 **** xref:getting-started/quick-start-guides/deploy-rancher-manager/aws.adoc[]
 **** xref:getting-started/quick-start-guides/deploy-rancher-manager/aws-marketplace.adoc[]
@@ -31,43 +27,37 @@
 **** xref:getting-started/quick-start-guides/deploy-rancher-manager/helm-cli.adoc[]
 
 // Rancher Prime
-// Check 
 
 *** xref:getting-started/quick-start-guides/deploy-rancher-manager/prime.adoc[]
 
 // Deploying Workloads
-// Check 
 
-*** xref:getting-started/quick-start-guides/deploy-workloads/deploy-workloads.adoc[]
+*** xref:getting-started/quick-start-guides/deploy-workloads/index.adoc[]
 
 **** xref:getting-started/quick-start-guides/deploy-workloads/workload-ingress.adoc[]
 **** xref:getting-started/quick-start-guides/deploy-workloads/nodeports.adoc[]
 
 // Installing and Upgrading Rancher
-// Check 
 
-** xref:getting-started/installation-and-upgrade/installation-and-upgrade.adoc[]
+** xref:getting-started/installation-and-upgrade/index.adoc[]
 
 // Installation Requirements
-// Check 
 
-*** xref:getting-started/installation-and-upgrade/installation-requirements/installation-requirements.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-requirements/index.adoc[]
 
 **** xref:getting-started/installation-and-upgrade/installation-requirements/port-requirements.adoc[] 
 
 // Installation References
-// Check 
 
-*** xref:getting-started/installation-and-upgrade/installation-references/installation-references.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-references/index.adoc[]
 
 **** xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[]
 **** xref:getting-started/installation-and-upgrade/installation-references/tls-settings.adoc[]
 **** xref:getting-started/installation-and-upgrade/installation-references/feature-flags.adoc[]
 
 // Install/Upgrade Rancher on a Kubernetes Cluster
-// Check 
 
-*** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[]
+*** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/index.adoc[]
 
 **** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rollbacks.adoc[]
 **** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades.adoc[]
@@ -78,14 +68,12 @@
 **** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/troubleshooting.adoc[]
 
 // Other Installation Methods
-// Check 
 
-*** xref:getting-started/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
+*** xref:getting-started/installation-and-upgrade/other-installation-methods/index.adoc[]
 
 // Air-Gapped Helm CLI Install
-// Check 
 
-**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc[]
 
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/infrastructure-private-registry.adoc[]
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images.adoc[]
@@ -94,27 +82,24 @@
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.adoc[]
 
 // Installing Rancher on a Single Node Using Docker
-// Check 
 
-**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/rancher-on-a-single-node-with-docker.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc[]
 
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc[]
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc[]
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[]
 
 // Installing Rancher behind an HTTP Proxy
-// Check 
 
-**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/rancher-behind-an-http-proxy.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/index.adoc[]
 
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/set-up-infrastructure.adoc[]
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-kubernetes.adoc[]
 ***** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher.adoc[]
 
 // Resources
-// Check
 
-**** xref:getting-started/installation-and-upgrade/resources/resources.adoc[]
+**** xref:getting-started/installation-and-upgrade/resources/index.adoc[]
 
 ***** xref:getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc[]
 ***** xref:getting-started/installation-and-upgrade/resources/helm-version-requirements.adoc[]
