Updating tabs structure and updating xref link file paths
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc
@@ -21,13 +21,13 @@ In this installation scenario, you'll install Docker on a single Linux host, and
 .Want to use an external load balancer?
 ====
 
-See xref:../../../../how-to-guides/advanced-user-guides/configure-layer-7-nginx-load-balancer.adoc[Docker Install with an External Load Balancer] instead.
+See xref:how-to-guides/advanced-user-guides/configure-layer-7-nginx-load-balancer.adoc[Docker Install with an External Load Balancer] instead.
 ====
 
 
 A Docker installation of Rancher is recommended only for development and testing purposes. The ability to migrate Rancher to a high-availability cluster depends on the Rancher version:
 
-The Rancher backup operator can be used to migrate Rancher from the single Docker container install to an installation on a high-availability Kubernetes cluster. For details, refer to the documentation on xref:../../../../how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc[migrating Rancher to a new cluster.]
+The Rancher backup operator can be used to migrate Rancher from the single Docker container install to an installation on a high-availability Kubernetes cluster. For details, refer to the documentation on xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc[migrating Rancher to a new cluster.]
 
 == Privileged Access for Rancher
 
@@ -35,11 +35,11 @@ When the Rancher server is deployed in the Docker container, a local Kubernetes 
 
 == Requirements for OS, Docker, Hardware, and Networking
 
-Make sure that your node fulfills the general xref:../../installation-requirements/installation-requirements.adoc[installation requirements.]
+Make sure that your node fulfills the general xref:getting-started/installation-and-upgrade/installation-requirements/installation-requirements.adoc[installation requirements.]
 
 == 1. Provision Linux Host
 
-Provision a single Linux host according to our xref:../../installation-requirements/installation-requirements.adoc[Requirements] to launch your Rancher server.
+Provision a single Linux host according to our xref:getting-started/installation-and-upgrade/installation-requirements/installation-requirements.adoc[Requirements] to launch your Rancher server.
 
 == 2. Choose an SSL Option and Install Rancher
 
@@ -49,20 +49,20 @@ For security purposes, SSL (Secure Sockets Layer) is required when using Rancher
 .Do you want to..
 ====
 
-* Use a proxy? See xref:../../../../reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[HTTP Proxy Configuration]
-* Configure custom CA root certificate to access your services? See xref:../../../../reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_custom_ca_certificate/[Custom CA root certificate]
-* Complete an Air Gap Installation? See xref:../air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[Air Gap: Docker Install]
-* Record all transactions with the Rancher API? See xref:../../../../reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API Auditing]
+* Use a proxy? See xref:reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[HTTP Proxy Configuration]
+* Configure custom CA root certificate to access your services? See xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_custom_ca_certificate/[Custom CA root certificate]
+* Complete an Air Gap Installation? See xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[Air Gap: Docker Install]
+* Record all transactions with the Rancher API? See xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API Auditing]
 ====
 
 
 Choose from the following options:
 
 * <<Option A: Default Rancher-generated Self-signed Certificate,Option A: Default Rancher-generated Self-signed Certificate>>
-* <<Option B: Bring Your Own Certificate, Self-signed,Option B: Bring Your Own Certificate, Self-signed>>
-* <<Option C: Bring Your Own Certificate, Signed by a Recognized CA,Option C: Bring Your Own Certificate, Signed by a Recognized CA>>
+* <<_option_b_bring_your_own_certificate_self_signed,Option B: Bring Your Own Certificate, Self-signed>>
+* <<_option_c_bring_your_own_certificate_signed_by_a_recognized_ca,Option C: Bring Your Own Certificate, Signed by a Recognized CA>>
 * <<Option D: Let's Encrypt Certificate,Option D: Let's Encrypt Certificate>>
-* <<Option E: Localhost tunneling, no Certificate,Option E: Localhost tunneling, no Certificate>>
+* <<_option_e_localhost_tunneling_no_certificate,Option E: Localhost tunneling, no Certificate>>
 
 === Option A: Default Rancher-generated Self-signed Certificate
 
@@ -88,7 +88,7 @@ In development or testing environments where your team will access your Rancher 
 Create a self-signed certificate using https://www.openssl.org/[OpenSSL] or another method of your choice.
 
 * The certificate files must be in PEM format.
-* In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:certificate-troubleshooting.adoc[Certificate Troubleshooting.]
+* In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
 ====
 
 
@@ -133,7 +133,7 @@ The Docker install is not recommended for production. These instructions are pro
 ====
 
 * The certificate files must be in PEM format.
-* In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:certificate-troubleshooting.adoc[Certificate Troubleshooting.]
+* In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
 ====
 
 
@@ -236,13 +236,13 @@ When installing Rancher on a single node with Docker, there are several advanced
 * Persistent Data
 * Running `rancher/rancher` and `rancher/rancher-agent` on the Same Node
 
-Refer to xref:../../../../reference-guides/single-node-rancher-in-docker/advanced-options.adoc[this page] for details.
+Refer to xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc[this page] for details.
 
 == Troubleshooting
 
-Refer to xref:certificate-troubleshooting.adoc[this page] for frequently asked questions and troubleshooting tips.
+Refer to xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[this page] for frequently asked questions and troubleshooting tips.
 
 == What's Next?
 
-* *Recommended:* Review Single Node xref:../../../../how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-docker-installed-rancher.adoc[Backup] and xref:../../../../how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-docker-installed-rancher.adoc[Restore]. Although you don't have any data you need to back up right now, we recommend creating backups after regular Rancher use.
-* Create a Kubernetes cluster: xref:../../../../how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/kubernetes-clusters-in-rancher-setup.adoc[Provisioning Kubernetes Clusters].
+* *Recommended:* Review Single Node xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-docker-installed-rancher.adoc[Backup] and xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-docker-installed-rancher.adoc[Restore]. Although you don't have any data you need to back up right now, we recommend creating backups after regular Rancher use.
+* Create a Kubernetes cluster: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/kubernetes-clusters-in-rancher-setup.adoc[Provisioning Kubernetes Clusters].
