--- a/versions/v2.9/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+++ b/versions/v2.9/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
@@ -39,7 +39,7 @@ These users can view most cluster level resources and create new projects.
 +
 [WARNING]
 ====
-When a Cluster Member creates a project, the user is automatically assigned <<Project Roles, Project Owner privileges>>. This grants them comprehensive control over the project and its associated resources, including permissions to deploy workloads. Without enforced xref:security/psa-pss.adoc[Pod Security Standards (PSS) and Pod Security Admission (PSA)], a Cluster Member will be able to execute privileged containers in the cluster.
+When a Cluster Member creates a project, the user is automatically assigned <<Project Roles, Project Owner privileges>>. This grants them comprehensive control over the project and its associated resources, including permissions to deploy workloads. Without enforced xref:security/psa-pss.adoc[Pod Security Standards (PSS) and Pod Security Admission (PSA)], a Cluster Member is able to execute privileged containers in the cluster.
 ====
 
 === Custom Cluster Roles
