Add security warning for Cluster Memebers on Cluster and Project Roles page (#744)
* Add security warning for Cluster Memebers on Cluster and Project Roles page

* Apply suggestion from @btat

Co-authored-by: Billy Tat <btat@suse.com>

* Fix grammar mistake

---------

Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/v2.11/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+++ b/versions/v2.11/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
@@ -1,6 +1,6 @@
 = Cluster and Project Roles
 :page-languages: [en, zh]
-:revdate: 2025-03-12
+:revdate: 2026-02-11
 :page-revdate: {revdate}
 :community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles 
 :product-path: rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles
@@ -36,6 +36,11 @@ These users have full control over the cluster and all resources in it.
 * *Cluster Member:*
 +
 These users can view most cluster level resources and create new projects.
++
+[WARNING]
+====
+When a Cluster Member creates a project, the user is automatically assigned <<Project Roles, Project Owner privileges>>. This grants them comprehensive control over the project and its associated resources, including permissions to deploy workloads. Without enforced xref:security/psa-pss.adoc[Pod Security Standards (PSS) and Pod Security Admission (PSA)], a Cluster Member is able to execute privileged containers in the cluster.
+====
 
 === Custom Cluster Roles
 
