--- a/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
@@ -1,6 +1,6 @@
 = Cluster and Project Roles
 :page-languages: [en, zh]
-:revdate: 2024-11-22
+:revdate: 2026-02-11
 :page-revdate: {revdate}
 
 Cluster and project roles define user authorization inside a cluster or project.
@@ -34,6 +34,11 @@ These users have full control over the cluster and all resources in it.
 * *Cluster Member:*
 +
 These users can view most cluster level resources and create new projects.
++
+[WARNING]
+====
+When a Cluster Member creates a project, the user is automatically assigned <<Project Roles, Project Owner privileges>>. This grants them comprehensive control over the project and its associated resources, including permissions to deploy workloads. Without enforced xref:security/psa-pss.adoc[Pod Security Standards (PSS) and Pod Security Admission (PSA)], a Cluster Member is able to execute privileged containers in the cluster.
+====
 
 === Custom Cluster Roles
 
