Update ifevals / add attributes to 3. Install Rancher page

--- a/versions/v2.10/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.10/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -65,20 +65,15 @@ kubectl rollout status deployment -n cert-manager cert-manager-webhook
 
 == Install {rancher-product-name}
 
-Next you can install Rancher Prime itself. First, add the Helm repository:
+Next you can install {rancher-product-name} itself. First, add the Helm repository:
+
+[sh,subs="attributes+"]
+----
+helm repo add {rancher-helm-repo} <helm-chart-repo-url>
+----
 
 ifeval::["{build-type}" == "product"]
-----
-helm repo add rancher-prime <helm-chart-repo-url>
-----
-
 include::shared:ROOT:partial$en/helm-chart-repo-url.adoc[]
-endif::[]
-
-ifeval::["{build-type}" == "community"]
-----
-helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
-----
 endif::[]
 
 Create a namespace:
@@ -91,25 +86,16 @@ And install Rancher with Helm. Rancher also needs a proxy configuration so that 
 
 ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+endif::[]
 
+[sh,subs="attributes+"]
 ----
-helm upgrade --install rancher rancher-prime/rancher \
+helm upgrade --install rancher {rancher-helm-repo}/rancher \
    --namespace cattle-system \
    --set hostname=rancher.example.com \
    --set proxy=http://${proxy_host} \
    --set noProxy=127.0.0.0/8\\,10.0.0.0/8\\,cattle-system.svc\\,172.16.0.0/12\\,192.168.0.0/16\\,.svc\\,.cluster.local
 ----
-endif::[]
-
-ifeval::["{build-type}" == "community"]
-----
-helm upgrade --install rancher rancher-latest/rancher \
-   --namespace cattle-system \
-   --set hostname=rancher.example.com \
-   --set proxy=http://${proxy_host} \
-   --set noProxy=127.0.0.0/8\\,10.0.0.0/8\\,cattle-system.svc\\,172.16.0.0/12\\,192.168.0.0/16\\,.svc\\,.cluster.local
-----
-endif::[]
 
 After waiting for the deployment to finish:
 
