Update ifevals / add attributes to Updaning the Rancher Certificate page

--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -124,24 +124,13 @@ privateCA: true
 
 . Upgrade the Helm application instance using the `values.yaml` file and the current chart version. The version must match to prevent an upgrade of Rancher.
 +
-[,bash]
+[,bash,subs="attributes+"]
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
 ----
-endif::[]
-
-ifeval::["{build-type}" == "community"]
-[,bash]
-----
- helm upgrade rancher rancher-stable/rancher \
-  --namespace cattle-system \
-  -f values.yaml \
-  --version <DEPLOYED_RANCHER_VERSION>
-----
-endif::[]
 
 When the change is completed, navigate to `\https://<rancher_server_url>/v3/settings/cacerts` to verify that the value matches the CA certificate written in the `tls-ca` secret earlier. The CA `cacerts` value may not update until all Rancher pods start.
 
@@ -294,27 +283,13 @@ helm ls -n cattle-system
   ... If using Let's Encrypt update the value to: `letsEncrypt`
 . Update the Helm values for the Rancher chart using the `values.yaml` file, and the current chart version to prevent an upgrade:
 +
-ifeval::["{build-type}" == "product"]
-include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
-+
-[,bash]
+[,bash,subs="attributes+"]
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
 ----
-endif::[]
-
-ifeval::["{build-type}" == "community"]
-[,bash]
-----
-helm upgrade rancher rancher-stable/rancher \
-  --namespace cattle-system \
-  -f values.yaml \
-  --version <DEPLOYED_RANCHER_VERSION>
-----
-endif::[]
 
 === 4. Reconfigure Rancher agents for the non-private/common certificate
 
