--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -128,24 +128,14 @@ privateCA: true
 ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
-[,bash]
+endif::[]
+[,bash,subs="attributes+"]
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
 ----
-endif::[]
-
-ifeval::["{build-type}" == "community"]
-[,bash]
-----
- helm upgrade rancher rancher-stable/rancher \
-  --namespace cattle-system \
-  -f values.yaml \
-  --version <DEPLOYED_RANCHER_VERSION>
-----
-endif::[]
 
 When the change is completed, navigate to `\https://<rancher_server_url>/v3/settings/cacerts` to verify that the value matches the CA certificate written in the `tls-ca` secret earlier. The CA `cacerts` value may not update until all Rancher pods start.
 
@@ -301,24 +291,14 @@ helm ls -n cattle-system
 ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 +
-[,bash]
+endif::[]
+[,bash,subs="attributes+"]
 ----
-helm upgrade rancher rancher-prime/rancher \
+helm upgrade rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version <DEPLOYED_RANCHER_VERSION>
 ----
-endif::[]
-
-ifeval::["{build-type}" == "community"]
-[,bash]
-----
-helm upgrade rancher rancher-stable/rancher \
-  --namespace cattle-system \
-  -f values.yaml \
-  --version <DEPLOYED_RANCHER_VERSION>
-----
-endif::[]
 
 === 4. Reconfigure Rancher agents for the non-private/common certificate
 
