Fix index files

--- a/community-docs/v2.13/modules/ROOT/nav.adoc
+++ b/community-docs/v2.13/modules/ROOT/nav.adoc
@@ -179,6 +179,8 @@
 
 // About Provisioning Drivers
 
+// Check Index
+
 **** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-provisioning-drivers/about-provisioning-drivers.adoc[]
 
 ***** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-provisioning-drivers/manage-cluster-drivers.adoc[]
@@ -550,7 +552,7 @@
 
 ***** xref:reference-guides/cluster-configuration/rancher-server-configuration/gke-cluster-configuration/gke-private-clusters.adoc[]
 
-// Check Path
+// Check Index
 
 **** xref:reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/use-existing-nodes.adoc[]
 
@@ -657,7 +659,7 @@
 
 * xref:integrations-in-rancher/index.adoc[]
 
-// Check Path
+// Check Index
 
 ** xref:integrations-in-rancher/kubernetes-distributions/kubernetes-distributions.adoc[]
 
