Sync Community PR #2024: Change Rancher security structure and content (#677)
* Remove Kubernetes Security Best Practices page

* Update SUSE Rancher Prime Security Guides page

* Add About k3s-selinux page

* Update About rancher-selinux page

* Update SELinux RPM page

* Remove reference to Kubernetes Security Best Practicespage

* Fix nav for About rancher-selinux section

* Update Rancher Security Guides page

* Update versions/v2.13/modules/en/pages/security/selinux-rpm/about-k3s-selinux.adoc

Co-authored-by: Billy Tat <btat@suse.com>

* Add community path / product path attributes

* Symlink about-k3s-selinux.adoc

---------

Co-authored-by: Billy Tat <btat@suse.com>

--- a/versions/v2.13/modules/en/nav.adoc
+++ b/versions/v2.13/modules/en/nav.adoc
@@ -307,14 +307,14 @@ endif::[]
 * Security
 ** xref:security/security-overview.adoc[]
 ** xref:security/cves.adoc[]
-** xref:security/kubernetes-security-best-practices.adoc[]
 ** xref:security/rancher-security-best-practices.adoc[]
 ** xref:security/rancher-webhook/rancher-webhook.adoc[]
 *** xref:security/rancher-webhook/expired-webhook-certificate-rotation.adoc[]
 *** xref:security/rancher-webhook/hardening.adoc[]
 *** xref:security/selinux-rpm/about-rancher-selinux.adoc[]
 **** xref:security/selinux-rpm/selinux-rpm.adoc[]
-*** xref:security/selinux-rpm/about-rke2-selinux.adoc[]
+**** xref:security/selinux-rpm/about-rke2-selinux.adoc[]
+**** xref:security/selinux-rpm/about-k3s-selinux.adoc[]
 ** xref:security/compliance-scans/compliance-scans.adoc[]
 *** xref:security/compliance-scans/rbac-for-compliance-scans.adoc[]
 *** xref:security/compliance-scans/how-to.adoc[]
