--- a/versions/v2.13/modules/zh/pages/security/security-overview.adoc
+++ b/versions/v2.13/modules/zh/pages/security/security-overview.adoc
@@ -1,6 +1,6 @@
 = 安全
 :page-languages: [en, zh]
-:revdate: 2025-08-22
+:revdate: 2026-01-20
 :page-revdate: {revdate}
 
 [pass]
@@ -39,9 +39,7 @@ When Rancher runs a Compliance scan on a cluster, it generates a report showing 
 
 == SELinux RPM
 
-https://en.wikipedia.org/wiki/Security-Enhanced_Linux[安全增强型 Linux (SELinux)] 是对 Linux 的安全增强。被政府机构使用之后，SELinux 已成为行业标准，并在 CentOS 7 和 8 上默认启用。
-
-我们提供了 `rancher-selinux` 和 `rke2-selinux` 两个 RPM（Red Hat 软件包），让 Rancher 产品能够在 SELinux 主机上正常运行。有关详细信息，请参阅xref:security/selinux-rpm/selinux-rpm.adoc[此页面]。
+We provide three RPMs (RPM Package Manager) that enable Rancher products to function properly on SELinux-enforcing hosts: `rancher-selinux`, `rke2-selinux` and `k3s-selinux`.  For details, see xref:security/selinux-rpm/selinux-rpm.adoc[this page].
 
 == Rancher 加固指南
 
@@ -80,8 +78,69 @@ Rancher 致力于向社区通报我们产品中的安全问题。有关我们已
 
 == Kubernetes 安全最佳实践
 
-有关保护 Kubernetes 集群的建议，请参阅 xref:security/kubernetes-security-best-practices.adoc[Kubernetes 安全最佳实践]指南。
+For recommendations on securing your Kubernetes cluster, refer to the https://kubernetes.io/docs/tasks/administer-cluster/securing-a-cluster/[Kubernetes Cluster Security Best Practices] guide.
 
 == Rancher 安全最佳实践
 
 有关保护 Rancher Manager 部署的建议，请参阅 xref:security/rancher-security-best-practices.adoc[Rancher 安全最佳实践]指南。
+
+== Rancher Kubernetes Distributions (K3s/RKE2) Self-Assessment and Hardening Guides
+
+Rancher uses the following Kubernetes distributions:
+
+* https://documentation.suse.com/en-us/cloudnative/rke2/[*RKE2*] is a fully conformant Kubernetes distribution that focuses on security and compliance within the U.S. Federal Government sector.
+* https://documentation.suse.com/en-us/cloudnative/k3s/[*K3s*] is a fully conformant, lightweight Kubernetes distribution. It is easy to install, with half the memory requirement of upstream Kubernetes, all in a binary of less than 100 MB.
+
+To harden a Kubernetes cluster that's running a distribution other than those listed, refer to your Kubernetes provider's docs.
+
+=== Hardening Guides and Benchmark Versions
+
+Each self-assessment guide is accompanied by a hardening guide. These guides were tested alongside the listed Rancher releases. Each self-assessment guide was tested on a specific Kubernetes version and CIS benchmark version. If a CIS benchmark has not been validated for your Kubernetes version, you can use the existing guides until a guide for your version is added.
+
+=== RKE2 Guides
+
+|===
+| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guide
+
+| Standalone RKE2
+| Kubernetes v1.27
+| CIS v1.9
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment19.html[Link]
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html[Link]
+
+| Standalone RKE2
+| Kubernetes v1.28
+| CIS v1.10
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment110.html[Link]
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html[Link]
+
+| Standalone RKE2
+| Kubernetes v1.29 and above
+| CIS v1.11
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/cis_self_assessment111.html[Link]
+| https://documentation.suse.com/cloudnative/rke2/latest/en/security/hardening_guide.html[Link]
+|===
+
+=== K3s Guides
+
+|===
+| Type | Kubernetes Version | CIS Benchmark Version | Self Assessment Guide | Hardening Guide
+
+| Standalone K3s
+| Kubernetes v1.27
+| CIS v1.9
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.9.html[Link]
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html[Link]
+
+| Standalone K3s
+| Kubernetes v1.28
+| CIS v1.10
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.10.html[Link]
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html[Link]
+
+| Standalone K3s
+| Kubernetes v1.29 and above
+| CIS v1.11
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/self-assessment-1.11.html[Link]
+| https://documentation.suse.com/cloudnative/k3s/latest/en/security/hardening-guide.html[Link]
+|===
