--- a/community-docs/v2.12/modules/ROOT/nav.adoc
+++ b/community-docs/v2.12/modules/ROOT/nav.adoc
@@ -200,7 +200,7 @@
 **** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/psa-config-templates.adoc[]
 **** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/global-default-private-registry.adoc[]
 **** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/custom-branding.adoc[]
-**** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/notification-center[]
+**** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/notification-center.adoc[]
 
 // Cluster Administration
 
@@ -382,7 +382,7 @@
 *** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/index.adoc[]
 
 **** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/create-apps.adoc[]
-**** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/oci-repositories[]
+**** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/oci-repositories.adoc[]
 
 // Backup, Restore, and Disaster Recovery
 
@@ -576,7 +576,7 @@
 ***** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/amazon-ec2.adoc[]
 ***** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/digitalocean.adoc[]
 ***** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/azure.adoc[]
-***** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/google-gce"
+***** xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/google-gce.adoc[]
 
 // Single-Node Rancher in Docker
 
