--- a/community-docs/v2.10/modules/ROOT/nav.adoc
+++ b/community-docs/v2.10/modules/ROOT/nav.adoc
@@ -390,7 +390,7 @@
 *** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/index.adoc[]
 
 **** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/create-apps.adoc[]
-**** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/oci-repositories[]
+**** xref:how-to-guides/new-user-guides/helm-charts-in-rancher/oci-repositories.adoc[]
 
 // Backup, Restore, and Disaster Recovery
 
