Remove ifevals / use attributes in install-rancher-ha

--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -65,15 +65,16 @@ Upgrades are not supported to, from, or between Alphas.
 ====
 endif::[]
 
-ifeval::["{build-type}" == "product"]
-. Fetch the Rancher Prime chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
+. Fetch the {rancher-product-name} chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
 ** To fetch the latest version:
+ifeval::["{build-type}" == "product"]
 +
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+endif::[]
 +
 [,shell]
 ----
-helm fetch rancher-prime/rancher
+helm fetch {rancher-helm-repo}/rancher
 ----
 ** To fetch a specific version:
 +
@@ -81,34 +82,19 @@ helm fetch rancher-prime/rancher
 +
 [,shell]
 ----
-helm search repo --versions rancher-prime
+helm search repo --versions {rancher-helm-repo}
 ----
-+
+
 .. Fetch a specific version by specifying the `--version` parameter:
+ifeval::["{build-type}" == "product"]
 +
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+endif::[]
 +
 [,shell]
 ----
-helm fetch rancher-prime/rancher --version=<version>
+helm fetch {rancher-helm-repo}/rancher --version=<version>
 ----
-endif::[]
-
-ifeval::["{build-type}" == "community"]
-. Fetch the latest Rancher chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
-+
-[,plain]
-----
- helm fetch rancher-<CHART_REPO>/rancher
-----
-+
-If you require a specific version of Rancher, you can fetch this with the Helm `--version` parameter like in the following example:
-+
-[,plain]
-----
- helm fetch rancher-stable/rancher --version=v2.4.8
-----
-endif::[]
 
 === 2. Choose your SSL Configuration
 
