--- a/versions/v2.11/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.11/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -101,6 +101,11 @@ kubectl rollout status deployment -n cattle-system rancher
 
 You can now navigate to `+https://rancher.example.com+` and start using Rancher.
 
+[CAUTION]
+====
+If you don’t intend to send telemetry data, opt out telemetry during the initial login. Leaving this active in an air-gapped environment can cause issues if the sockets cannot be opened successfully.
+====
+
 == Additional Resources
 
 These resources could be helpful when installing Rancher:
