Enable attributes in code blocks

--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
@@ -72,7 +72,7 @@ ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 endif::[]
 +
-[,shell]
+[,shell,subs="attributes+"]
 ----
 helm fetch {rancher-helm-repo}/rancher
 ----
@@ -80,7 +80,7 @@ helm fetch {rancher-helm-repo}/rancher
 +
 .. Check to see which version of Rancher Prime are available.
 +
-[,shell]
+[,shell,subs="attributes+"]
 ----
 helm search repo --versions {rancher-helm-repo}
 ----
@@ -91,7 +91,7 @@ ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
 endif::[]
 +
-[,shell]
+[,shell,subs="attributes+"]
 ----
 helm fetch {rancher-helm-repo}/rancher --version=<version>
 ----
