Add RN for Cluster API Major Bug Fix #53845

--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
@@ -60,53 +60,11 @@ ifeval::["{build-type}" != "community"]
 The chart name change introduced in Rancher Prime v2.13.1 has been reverted. The chart name `rancher` should be used for all installations and upgrades. As an example, the installation command is now `helm install rancher rancher-prime/rancher`.
 endif::[]
 
-//== Rancher General
+== SUSE Rancher Prime: Cluster API
 
-//=== Features and Enhancements
+=== Major Bug Fixe
 
-//=== Major Bug Fixes
-
-//== Rancher App (Global UI)
-
-//=== Features and Enhancements
-
-//=== Major Bug Fixes
-
-//== Authentication
-
-//=== Features and Enhancements
-
-//== Cluster Provisioning
-
-//=== Features and Enhancements
-
-//=== Major Bug Fixes
-
-//== Rancher Webhook
-
-//=== Major Bug Fixes
-
-//== K3s Provisioning
-
-//=== Major Bug Fixes
-
-//=== Known Issues
-
-//== RKE2 Provisioning
-
-//=== Major Bug Fixes
-
-//== Backup/Restore
-
-//=== Features and Enhancements
-
-//== Continuous Delivery (Fleet)
-
-//=== Major Bug Fixes
-
-//== SUSE Virtualization (Harvester)
-
-//=== Known Issues
+- Fixed an issue where Rancher Turtles OCI chart repositories failed to install correctly. You can now install and manage Rancher Turtles Certified Providers from the Rancher Apps. If you previously encountered errors or saw duplicate versions when attempting to install this providers chart, please re-add the repository and refresh your repositories to see the changes. See https://github.com/rancher/rancher/issues/53845[#53845].
 
 == Install/Upgrade Notes
 
