--- a/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
+++ b/versions/v2.13/modules/en/pages/release-notes/v2.13.3.adoc
@@ -62,7 +62,7 @@ endif::[]
 
 == SUSE Rancher Prime: Cluster API
 
-=== Major Bug Fixe
+=== Major Bug Fixes
 
 - Fixed an issue where Rancher Turtles OCI chart repositories failed to install correctly. You can now install and manage Rancher Turtles Certified Providers from the Rancher Apps. If you previously encountered errors or saw duplicate versions when attempting to install this providers chart, please re-add the repository and refresh your repositories to see the changes. See https://github.com/rancher/rancher/issues/53845[#53845].
 
