Single source migrate-to-a-new-cluster page

--- a/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -208,11 +208,13 @@ Follow the steps to xref:installation-and-upgrade/install-rancher.adoc#_4_instal
 
 Use the same version of Helm to install Rancher, that was used on the first cluster.
 
+ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+endif::[]
 
-[,bash]
+[,bash,subs="attributes+"]
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   --set hostname=<same hostname as the server URL from the first Rancher server> \
   --version x.y.z
@@ -230,11 +232,13 @@ helm get values rancher -n cattle-system -o yaml > rancher-values.yaml
 
 These values can be reused using the `rancher-values.yaml` file. Be sure to switch the kubeconfig to the new Rancher environment.
 
+ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+endif::[]
 
-[,bash]
+[,bash,subs="attributes+"]
 ----
-helm install rancher rancher-prime/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
+helm install rancher {rancher-helm-repo}/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
 ----
 ====
 
