--- a/versions/v2.9/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
+++ b/versions/v2.9/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc
@@ -186,9 +186,9 @@ Follow the steps to xref:installation-and-upgrade/install-rancher.adoc#_4_instal
 
 Use the same version of Helm to install Rancher, that was used on the first cluster.
 
-[,bash]
+[,bash,subs="attributes+"]
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   --set hostname=<same hostname as the server URL from the first Rancher server> \
   --version x.y.z
@@ -206,9 +206,9 @@ helm get values rancher -n cattle-system -o yaml > rancher-values.yaml
 
 These values can be reused using the `rancher-values.yaml` file. Be sure to switch the kubeconfig to the new Rancher environment.
 
-[,bash]
+[,bash,subs="attributes+"]
 ----
-helm install rancher rancher-prime/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
+helm install rancher {rancher-helm-repo}/rancher -n cattle-system -f rancher-values.yaml --version x.y.z
 ----
 ====
 
