--- a/versions/v2.11/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
+++ b/versions/v2.11/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
@@ -39,8 +39,9 @@ Values set from the Rancher API will override the value passed in through the co
 
 When installing Rancher with a Helm chart, use the `--set` option. In the below example, two features are enabled by passing the feature flag names in a comma separated list:
 
+[,shell,subs="attributes+"]
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set 'extraEnv[0].name=CATTLE_FEATURES'
