--- a/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
+++ b/versions/v2.13/modules/en/pages/rancher-admin/experimental-features/experimental-features.adoc
@@ -41,10 +41,13 @@ Values set from the Rancher API will override the value passed in through the co
 
 When installing Rancher with a Helm chart, use the `--set` option. In the below example, two features are enabled by passing the feature flag names in a comma separated list:
 
+ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+endif::[]
 
+[,shell,subs="attributes+"]
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   --set hostname=rancher.my.org \
   --set 'extraEnv[0].name=CATTLE_FEATURES'
