--- a/versions/v2.13/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
+++ b/versions/v2.13/modules/en/pages/security/rancher-webhook/rancher-webhook.adoc
@@ -90,11 +90,13 @@ When you use Helm to install the Rancher chart, you can add custom Helm values t
 
 These values are synced to the `rancher-config` ConfigMap during installation.
 
+ifeval::["{build-type}" == "product"]
 include::shared:ROOT:partial$en/rancher-chart-rename.adoc[]
+endif::[]
 
-[,bash]
+[,bash,subs="attributes+"]
 ----
-helm install rancher rancher-prime/rancher \
+helm install rancher {rancher-helm-repo}/rancher \
   --namespace cattle-system \
   ...
   --set webhook.port=9553 \
